# forgottenserver

./: .appveyor.yml  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  build.sh  config.lua.dist  deploy.sh  schema.sql  setup-jenkins.sh  vcpkg.json
.github/workflows/: benchmarks.yml  build-vcpkg.yml  clang-format.yml  docker-image.yml  lua-check.yml
data/: server_config.lua
data/items/: proficiencies.json
data/migrations/: 37.lua  38.lua  40.lua  47.lua  49.lua  50.lua  51.lua  55.lua
data/raids/: dragonsMountainSpawn.xml  (+3 more)
docs/: astra-hotkey-equip-client-contract.md  character_bazaar_install.md  character_bazaar_protocol.md  character_bazaar_testing.md
src/: CMakeLists.txt  astraclient.h  character_bazaar.cpp  character_bazaar.h  chat.cpp  chat.h  combat.cpp  condition.cpp  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  creature.cpp  creature.h  creatureevent.cpp  enums.h  events.cpp  familiar.cpp  familiar.h  fileloader.cpp  fileloader.h  game.cpp  game.h  guild.cpp  house.cpp  iologindata.cpp  item.cpp  item.h  items.cpp  lockfree.h  logger.cpp  logger.h  luachatchannel.cpp  luacreature.cpp  luacreatureevent.cpp  luagame.cpp  luaglobalevent.cpp  luaitem.cpp  luaitemtype.cpp  (+57 more)
src/tests/: CMakeLists.txt  test_chat_channel.cpp  test_creature_lifetime.cpp  test_item_lifetime.cpp  test_matrixarea.cpp  test_reactor.cpp  test_storage_maps.cpp  test_support.h  test_tools.cpp  test_xtea.cpp
tools/: cmake-linux-env.sh  tfs18_static_analysis_report.html
vc18/: theforgottenserver.vcxproj  theforgottenserver.vcxproj.filters
(+53 files in other folders)
